--- a/index.html
+++ b/index.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
 <html>
 <body>
+
 <h1>Hello World</h1>
 <p>I'm hosted with GitHub Pages.</p>
+
+<img src="spark.png" width="104" height="142">
+
 </body>
 </html>
