Trying a background Image
Added a background image, unsized

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<body>
+<body style="background-image:url("out of focus city.jpg")>
 
 <h1>Hello World</h1>
 <p>I'm hosted with GitHub Pages.</p>
