--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <h1>Hello World</h1>
 <p>I'm hosted with GitHub Pages.</p>
 <p>I am hoping html proves to be fun</p>
-<p>It seems every change is one change behind</p>
+<p>It seems every change is one change behind, or is it?</p>
 
 <img src="spark.png" width="104" height="142">
 
