Background image test 2

--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
-<body style="background-image:url("out of focus city.jpg")>
+<body style="background-image:url("out of focus city.gif")>
 
 <h1>Hello World</h1>
 <p>I'm hosted with GitHub Pages.</p>
 <p>I am hoping html proves to be fun</p>
-<p>It seems every change is one change behind, or is it?</p>
+<p>It seems every change is one change behind, or is it??</p>
 
 <img src="spark.png" width="104" height="142">
 
