--- a/index.html
+++ b/index.html
@@ -2,7 +2,12 @@
 <html>
 <style>
 body{
-		background-image: url("out of focus city.gif");
+		background-image: url("out of focus city.gif") no-repeat center center fixed;
+		-webkit-background-size: cover;
+		-moz-background-size: cover;
+		-o-background-size: cover;
+		background-size: cover;
+		
 	}
 </style>
 <body>
@@ -10,7 +15,7 @@ body{
 <h1>Hello World</h1>
 <p>I'm hosted with GitHub Pages.</p>
 <p>I am hoping html proves to be fun</p>
-<p>It seems every change is one change behind, or is it</p>
+<p>It seems every change is one change behind, or is it?</p>
 
 <img src="spark.png" width="104" height="142">
 
