Background gone test 2

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <style>
 body{
-		background-image: url("out of focus city.gif") no-repeat center center fixed;
+		background-image: url("out of focus city.gif");
 		<!-- -webkit-background-size: cover;
 		-moz-background-size: cover;
 		-o-background-size: cover;
