--- a/index.html
+++ b/index.html
@@ -12,6 +12,13 @@ body{
 </style>
 <body>
 
+<button>
+	Click me 
+		{
+		object-position: 50% 50%;
+		}
+</button>
+
 <h1 style="color:white;">My Name Is Cole Resetco</h1>
 <p style="color:white;">I'm hosted with GitHub Pages.</p>
 <p style="color:white;">I am hoping html proves to be fun</p>
