Changing button position test 1

--- a/index.html
+++ b/index.html
@@ -12,11 +12,8 @@ body{
 </style>
 <body>
 
-<button>
-	Click me 
-		{
-		object-position: 50% 50%;
-		}
+<button style="object-position: 50% 50%;">
+	Click me
 </button>
 
 <h1 style="color:white;">My Name Is Cole Resetco</h1>
