Play button CSS code test

--- a/index.html
+++ b/index.html
@@ -16,6 +16,13 @@ body{
 	Click me
 </button>
 
+#play_button {
+    position:absolute;
+    transition: .5s ease;
+    top: 50%;
+    left: 50%;
+}
+
 <h1 style="color:white;">My Name Is Cole Resetco</h1>
 <p style="color:white;">I'm hosted with GitHub Pages.</p>
 <p style="color:white;">I am hoping html proves to be fun</p>
