--- a/index.html
+++ b/index.html
@@ -9,19 +9,22 @@ body{
 		background-size: cover;-->
 		
 	}
+.button{
+	background-color: #42f1f4;
+	color: white;
+	padding: 15px 32px;
+	positon: relative;
+	left: 50%;
+	top: 50%;
+	
 </style>
 <body>
 
-<button style="object-position: 50% 50%;">
+<button class="button">
 	Click me
 </button>
 
-#play_button {
-    position:absolute;
-    transition: .5s ease;
-    top: 50%;
-    left: 50%;
-}
+
 
 <h1 style="color:white;">My Name Is Cole Resetco</h1>
 <p style="color:white;">I'm hosted with GitHub Pages.</p>
