--- a/index.html
+++ b/index.html
@@ -17,11 +17,13 @@ body{
 	
 .container .button{
 	background-color: #42f1f4;
-	color: white;
+	color: black;
 	padding: 15px 32px;
 	positon: absolute;
 	left: 50%;
 	top: 50%;
+	transform: translate(-50%, -50%);
+	-ms- transform: translate(-50%, -50%);
 	}
 	
 </style>
