--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@ body{
 	}
 .container {
 	position: relative;
-	width: 100%;
-	height: 100%;
+	width: auto;
+	height: auto;
 	}
 	
 .container .button{
