CBP Test 6 (Trying Static witdth/hight

--- a/index.html
+++ b/index.html
@@ -9,19 +9,14 @@ body{
 		background-size: cover;-->
 		
 	}
-.container {
-	position: relative;
-	width: auto;
-	height: auto;
-	}
-	
-.container .button{
+
+.button{
 	background-color: #42f1f4;
 	color: black;
 	padding: 15px 32px;
 	positon: absolute;
-	left: 50%;
-	top: 50%;
+	left: 800px;
+	top: 500px;
 	transform: translate(-50%, -50%);
 	-ms- transform: translate(-50%, -50%);
 	}
@@ -29,9 +24,9 @@ body{
 </style>
 <body>
 
-<div class="container">
-	<button class="button">Click me</button>
-</div>
+
+<button class="button">Click me</button>
+
 
 
 
