--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@ body{
 	positon: absolute;
 	left: 800px;
 	top: 500px;
-	transform: translate(-50%, -50%);
-	-ms- transform: translate(-50%, -50%);
+	transform: translate(+50%, +50%);
+	-ms- transform: translate(+50%, +50%);
 	}
 	
 </style>
