Move button to center with percents test 1

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@ body{
 	positon: absolute;
 	left: 800px;
 	top: 500px;
-	transform: translate(+800px, +500px);
-	-ms- transform: translate(+800px, +500px);
+	transform: translate(+800%, +500%);
+	-ms- transform: translate(+800%, +500%);
 	}
 	
 </style>
