Move button Center test 2
trying relative positioning

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ body{
 	background-color: #42f1f4;
 	color: black;
 	padding: 15px 32px;
-	positon: absolute;
+	positon: relative;
 	left: 800px;
 	top: 500px;
 	transform: translate(+800%, +500%);
