--- a/index.html
+++ b/index.html
@@ -9,23 +9,31 @@ body{
 		background-size: cover;-->
 		
 	}
-
+	
+.wrapper {
+	width: 100%;
+	height: 400px;
+	border: 1px solid black;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	}
+	
 .button{
 	background-color: #42f1f4;
 	color: black;
 	padding: 15px 32px;
 	positon: relative;
-	left: 800px;
-	top: 500px;
-	transform: translate(+800%, +500%);
-	-ms- transform: translate(+800%, +500%);
+	height: 20px;
+	width: 100px;
 	}
 	
 </style>
 <body>
 
+<div id="wrapper">
+	<button class="button">Click me</button>
 
-<button class="button">Click me</button>
 
 
 
@@ -33,7 +41,7 @@ body{
 <h1 style="color:white;">My Name Is Cole Resetco</h1>
 <p style="color:white;">I'm hosted with GitHub Pages.</p>
 <p style="color:white;">I am hoping html proves to be fun</p>
-<p style="color:white;">It seems every change is one change behind, or is it????</p>
+<p style="color:white;">It seems every change is one change behind, or is it</p>
 
 <img src="spark.png" width="104" height="142">
 
