--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ body{
 		
 	}
 	
-.wrapper {
+#wrapper {
 	width: 100%;
 	height: 400px;
 	border: 1px solid black;
@@ -19,7 +19,7 @@ body{
 	justify-content: center;
 	}
 	
-.button{
+button{
 	background-color: #42f1f4;
 	color: black;
 	padding: 15px 32px;
@@ -33,7 +33,7 @@ body{
 
 <div id="wrapper">
 	<button class="button">Click me</button>
-
+</div>
 
 
 
