--- a/index.html
+++ b/index.html
@@ -10,13 +10,16 @@ body{
 		
 	}
 	
-#wrapper {
-	width: 100%;
-	height: 400px;
-	border: 1px solid black;
+#container {
+	max-width: 400px;
+	max-height: 400px;
 	display: flex;
 	align-items: center;
 	justify-content: center;
+	margin-right: auto;
+	margin-left: auto;
+	margin-bottom: auto;
+	margin-top: auto;
 	}
 	
 button{
