--- a/index.html
+++ b/index.html
@@ -10,16 +10,16 @@ body{
 		
 	}
 	
-#container {
+#wrapper {
 	max-width: 400px;
 	max-height: 400px;
 	display: flex;
 	align-items: center;
 	justify-content: center;
-	margin-right: auto;
-	margin-left: auto;
-	margin-bottom: auto;
-	margin-top: auto;
+	margin-right: 50%;
+	margin-left: 50%;
+	margin-bottom: 50%;
+	margin-top: 50%;
 	}
 	
 button{
