Background Stopped Resizing

--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <style>
 body{
 		background-image: url("out of focus city.gif");
-		<!-- -webkit-background-size: cover;
+		-webkit-background-size: cover;
 		-moz-background-size: cover;
 		-o-background-size: cover;
-		background-size: cover;-->
+		background-size: cover;
 		
 	}
 	
@@ -25,7 +25,7 @@ body{
 button{
 	background-color: #42f1f4;
 	color: black;
-	padding: 15px 32px;
+	padding: 15px 40px;
 	positon: relative;
 	height: 40px;
 	width: 100px;
@@ -43,17 +43,13 @@ button{
 	<p style="color:white;">I'm hosted with GitHub Pages.</p>
 	<p style="color:white;">I am hoping html proves to be fun</p>
 	<p style="color:white;">It seems every change is one change behind, or is it</p>
+	<img src="spark.png" width="104" height="142">
 
 <div id="wrapper">
 	<button class="button">Click me</button>
 
-<img src="spark.png" width="104" height="142">
+
 </div>
-
-
-
-
-
 
 </body>
 </html>
