Fix Background resize test2

--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
 <style>
 body{
 		background-image: url("out of focus city.gif");
-		-webkit-background-size: cover;
-		-moz-background-size: cover;
-		-o-background-size: cover;
-		background-size: cover;
+		
+		background-repeat: no-repeat;
+        min-width: 50%;
+        min-height: 50%;
+        width: 100%;
+        height: 100%;
 		
 	}
 	
@@ -42,7 +44,7 @@ button{
 	</h1>
 	<p style="color:white;">I'm hosted with GitHub Pages.</p>
 	<p style="color:white;">I am hoping html proves to be fun</p>
-	<p style="color:white;">It seems every change is one change behind, or is it</p>
+	<p style="color:white;">It seems every change is one change behind, or is it?</p>
 	<img src="spark.png" width="104" height="142">
 
 <div id="wrapper">
