--- a/index.html
+++ b/index.html
@@ -4,11 +4,16 @@
 body{
 		background-image: url("out of focus city.gif");
 		
-		background-repeat: no-repeat;
-        min-width: 50%;
-        min-height: 50%;
-        width: 100%;
-        height: 100%;
+  	     -webkit-background-size: cover;
+         -moz-background-size: cover;
+         -o-background-size: cover;
+          background-size: cover;
+    		
+		top: 0px;
+		left: 0px;
+        min-width: 100%;
+        min-height: 100%;
+        position: fixed;
 		
 	}
 	
