Whered the button go T2

--- a/index.html
+++ b/index.html
@@ -8,12 +8,10 @@ body{
          -moz-background-size: cover;
          -o-background-size: cover;
           background-size: cover;
-    		
-		top: 0px;
-		left: 0px;
+		  
         min-width: 100%;
         min-height: 100%;
-        position: fixed;
+        position: absolute;
 		
 	}
 	
