Added Icon/ repositon button

--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html>
+<head>
+<link rel="icon" href="https://2static1.fjcdn.com/comments/Then+cut+both+arms+off+_cb82d30c55b559c8064c4e51161e8259.jpg%22%3E
+</head>
 <style>
 body{
 		background-image: url("out of focus city.gif");
@@ -23,8 +26,8 @@ body{
 	justify-content: center;
 	margin-right: 50%;
 	margin-left: 50%;
-	margin-bottom: 50%;
-	margin-top: 50%;
+	margin-bottom: 25%;
+	margin-top: 25%;
 	}
 	
 button{
