--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<link rel="icon" href="https://2static1.fjcdn.com/comments/Then+cut+both+arms+off+_cb82d30c55b559c8064c4e51161e8259.jpg%22%3E
+<link rel="icon" href="shine.png">
 </head>
 <style>
 body{
