--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ button{
 	<h1 style="color:white;">
 		My Name Is Cole Resetco
 		<a href="https://www.youtube.com/watch?v=4BHun2VVCsg&t=0s&list=PL7pPRLIf-fsvWUqTDG8XtpdNe4wIuYClh&index=2">
-			Have A kid Exploding
+			Have A kid Exploding?
 		</a>
 	</h1>
 	<p style="color:white;">I'm hosted with GitHub Pages.</p>
