--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ button{
 	<img src="spark.png" width="104" height="142">
 
 <div id="wrapper">
-	<button class="button">Click me</button>
+	<button class="button">Click_me</button>
 </div>
 
 </body>
