--- a/index.html
+++ b/index.html
@@ -53,7 +53,8 @@ button{
 	<img src="spark.png" width="104" height="142">
 
 <div id="wrapper">
-	<button class="button">Click_me</button>
+	<button onclick="getElementById('butts').innerHTML=Date()" class="button">Click me</button>
+	<p id="demo"></p>
 </div>
 
 </body>
