Making button say Time

--- a/index.html
+++ b/index.html
@@ -53,9 +53,11 @@ button{
 	<img src="spark.png" width="104" height="142">
 
 <div id="wrapper">
-	<button onclick="getElementById('butts').innerHTML=Date()" class="button">Click_me</button>
-	<p id="demo"></p>
+	<button onclick="getElementById('time').innerHTML=Date()" class="button">Click_me</button>
+
 </div>
+
+<p id="time"></p>
 
 </body>
 </html>
