--- a/index.html
+++ b/index.html
@@ -37,6 +37,15 @@ button{
 	height: 40px;
 	width: 150px;
 	}
+
+container {
+	position: relative;
+	text-align: center;
+	color: white;
+	
+Time-location {
+	position: absolute;
+	left: 50%;
 	
 </style>
 <body>
@@ -57,7 +66,9 @@ button{
 
 </div>
 
-<p id="time"></p>
+<div class="container">
+	<div class="Time-location" id="time"></div>
+</div>
 
 </body>
 </html>
