--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ Time-location {
 	</h1>
 	<p style="color:white;">I'm hosted with GitHub Pages.</p>
 	<p style="color:white;">I am hoping html proves to be fun</p>
-	<p style="color:white;">It seems every change is one change behind, or is it?</p>
+	<p style="color:white;">It seems every change is one change behind, or is it???</p>
 	<img src="spark.png" width="104" height="142">
 
 <div id="wrapper">
