--- a/index.html
+++ b/index.html
@@ -38,12 +38,12 @@ button{
 	width: 150px;
 	}
 
-container {
+.container {
 	position: relative;
 	text-align: center;
 	color: white;
 	
-Time-location {
+.Time-location {
 	position: absolute;
 	left: 50%;
 	
