--- a/index.html
+++ b/index.html
@@ -52,14 +52,14 @@ button{
 
 	<h1 style="color:white;">
 		My Name Is Cole Resetco
-		<a href="https://www.youtube.com/watch?v=4BHun2VVCsg&t=0s&list=PL7pPRLIf-fsvWUqTDG8XtpdNe4wIuYClh&index=2">
+		<a href="https://youtu.be/4BHun2VVCsg?t=17s">
 			Have A kid Exploding?
 		</a>
 	</h1>
 	<p style="color:white;">I'm hosted with GitHub Pages.</p>
 	<p style="color:white;">I am hoping html proves to be fun</p>
 	<p style="color:white;">It seems every change is one change behind, or is it???</p>
-	<img src="spark.png" width="104" height="142">
+	<img src="cute-kitty-animated-gif-35.gif" width="104" height="142">
 
 <div id="wrapper">
 	<button onclick="getElementById('time').innerHTML=Date()" class="button">Click_me</button>
