FFS Finally Added Smaller Video

--- a/index.html
+++ b/index.html
@@ -70,5 +70,13 @@ button{
 	<div class="Time-location" id="time"></div>
 </div>
 
+<div class="container">
+	<video width="1280" height="720" >
+		<source src="Equinox_Small.mp4" type="video/mp4">
+		Your Browser does not support this video type.
+	</video>
+</div>
+
+
 </body>
 </html>
