--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ button{
 	</h1>
 	<p style="color:white;">I'm hosted with GitHub Pages.</p>
 	<p style="color:white;">I am hoping html proves to be fun</p>
-	<p style="color:white;">It seems every change is one change behind, or is it????</p>
+	<p style="color:white;">It seems every change is one change behind, or is it?????</p>
 	<img src="cute-kitty-animated-gif-35.gif" width="250" height="250">
 
 <div id="wrapper">
@@ -70,12 +70,12 @@ button{
 	<div class="Time-location" id="time"></div>
 </div>
 
-<div class="container">
-	<video width="1280" height="720" >
+
+	<video width="1280" height="720" controls>
 		<source src="Equinox_Small.mp4" type="video/mp4">
 		Your Browser does not support this video type.
 	</video>
-</div>
+
 
 
 </body>
