--- a/index.html
+++ b/index.html
@@ -52,14 +52,15 @@ button{
 <body>
 
 	<h1 style="color:white;">
-		My Name Is Cole Resetco
+		My Name is Cole Resetco. This website is very much WIP, and is about as stable as
 		<a href="https://youtu.be/4BHun2VVCsg?t=17s">
-			Have A kid Exploding?
+			this Kid
 		</a>
+
 	</h1>
 	<p style="color:white;">I'm hosted with GitHub Pages.</p>
 	<p style="color:white;">I am hoping html proves to be fun</p>
-	<p style="color:white;">It seems every change is one change behind, or is it?????</p>
+	<p style="color:white;">It seems every change is one change behind, or is it</p>
 	<img src="cute-kitty-animated-gif-35.gif" width="250" height="250">
 
 <div id="wrapper">
