--- a/index.html
+++ b/index.html
@@ -40,13 +40,12 @@ button{
 
 .container {
 	position: relative;
-	text-align: center;
 	color: white;
 	
 .Time-location {
 	position: absolute;
-	top: 5%;
-	right20%;
+	top: 20px;
+	right: 80px;
 	
 </style>
 <body>
@@ -68,9 +67,9 @@ button{
 
 </div>
 
-
-<div class="Time-location" id="time"></div>
-
+<div class="container">
+	<div class="Time-location" id="time"></div>
+</div>
 
 <div class="container">
 	<video width="1280" height="720" controls>
