--- a/index.html
+++ b/index.html
@@ -33,13 +33,21 @@ button{
 	background-color: #42f1f4;
 	color: black;
 	padding: 15px 40px;
+	<--40/150-->
 	positon: relative;
-	height: 40px;
-	width: 150px;
+	top: 0px;
+	right: 0px
 	}
-
+.containerL2 {
+	position: relative;
+	text-align: center;
+	color: white;
+	z-index: -1
+	
+	
 .container {
 	position: relative;
+	text-align: center;
 	color: white;
 	
 .Time-location {
@@ -58,16 +66,15 @@ button{
 
 	</h1>
 	<p style="color:white;">I'm hosted with GitHub Pages.</p>
-	<p style="color:white;">I am hoping html proves to be fun</p>
+	<p style="color:white;">I am hoping html proves to be fun?</p>
 	<p style="color:white;">It seems every change is one change behind, or is it</p>
 	<img src="cute-kitty-animated-gif-35.gif" width="250" height="250">
 
-<div id="wrapper">
+<div class="containerL2">
 	<button onclick="getElementById('time').innerHTML=Date()" class="button">Click_me</button>
-
 </div>
 
-<div class="container">
+<div class="containerL2">
 	<div class="Time-location" id="time"></div>
 </div>
 
