Trying to move button top right

--- a/index.html
+++ b/index.html
@@ -38,13 +38,7 @@ button{
 	top: 0px;
 	right: 0px
 	}
-.containerL2 {
-	position: relative;
-	text-align: center;
-	color: white;
-	z-index: -1
-	
-	
+
 .container {
 	position: relative;
 	text-align: center;
@@ -57,25 +51,26 @@ button{
 	
 </style>
 <body>
-
+<div class="container">
 	<h1 style="color:white;">
 		My Name is Cole Resetco. This website is very much WIP, and is about as stable as
 		<a href="https://youtu.be/4BHun2VVCsg?t=17s">
 			this Kid
 		</a>
+		<button onclick="getElementById('time').innerHTML=Date()" class="button">Click_me</button>
+		<div class="Time-location" id="time"></div>
 
 	</h1>
+</div>
 	<p style="color:white;">I'm hosted with GitHub Pages.</p>
 	<p style="color:white;">I am hoping html proves to be fun?</p>
 	<p style="color:white;">It seems every change is one change behind, or is it</p>
 	<img src="cute-kitty-animated-gif-35.gif" width="250" height="250">
 
-<div class="containerL2">
-	<button onclick="getElementById('time').innerHTML=Date()" class="button">Click_me</button>
-</div>
 
-<div class="containerL2">
-	<div class="Time-location" id="time"></div>
+
+<div class="container">
+
 </div>
 
 <div class="container">
