--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<link rel="icon" href="shine.png">
+<link rel="icon" href="Shine Alpha.png">
 <title> Heyo Friendo </title>
 </head>
 <style>
@@ -61,7 +61,7 @@ button{
 
 	</h1>
 	<button onclick="getElementById('time').innerHTML=Date()" class="button">Click_me</button>
-	<div class="Time-location" id="time"></div>
+	<div class="Time-location" id="time"> </div>
 </div>
 	<p style="color:white;">I'm hosted with GitHub Pages.</p>
 	<p style="color:white;">I am hoping html proves to be fun?</p>
