--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
+<meta name="Website" content="width=device-width, initial-scale=1">
 <link rel="icon" href="Shine Alpha.png">
-<title> Heyo Friendo </title>
-</head>
+<title> Opening the Door </title>
 <style>
 body{
 		background-image: url("out of focus city.gif");
@@ -18,6 +18,8 @@ body{
         position: absolute;
 		
 	}
+    
+
 	
 #wrapper {
 	max-width: 400px;
@@ -39,6 +41,43 @@ button{
 	right: 0px
 	}
 
+/* Tab Preferences */
+.tab {
+	overflow: hidden;
+    border: 1px solid #ccc;
+    bacground-color: #f1f1f1;
+}
+
+.tab button {
+	background-color: inherit;
+    float: left;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    padding: 14px 16px;
+    trasnsition: 0.3s;
+    font-size: 17px;
+}
+    
+
+.tab button:hover {
+  background-color: #ddd;
+  
+}
+ 
+.tab button.active {
+  background-color: #ccc;
+}
+
+.tabcontent {
+	display: none;
+    padding: 6px 12px;
+    border: 1px solid #ccc;
+    border-top: none;
+}
+
+/* End Tab Preferences */
+
 .container {
 	position: relative;
 	text-align: center;
@@ -50,37 +89,65 @@ button{
 	right: 0px;
 	
 </style>
+</head>
 <body>
-<div class="container">
-	<h1 style="color:white;">
-		My Name is Cole Resetco. This website is very much WIP, and is about as stable as
-		<a href="https://youtu.be/4BHun2VVCsg?t=17s">
-			this Kid
-		</a>
+
+<div class="tab">
+	<button class="tablinks" onclick="openTab(event, 'Main')">Main</button>
+    <button class="tablinks" onclick="openTab(event, 'About Me')">About Me</button>
+    <button class="tablinks" onclick="openTab(event, 'My Projects')">My Projects</button>
+</div>
+
+<div id="Main" class="tabcontent">
+	<h3> A bit here a bit there </h3>
+
+	<div class="container">
+		<h1 style="color:white;">
+			My Name is Cole Resetco. This website is very much WIP, and is about as stable as
+			<a href="https://youtu.be/4BHun2VVCsg?t=17s">
+				this Kid
+			</a>
 
 
-	</h1>
-	<button onclick="getElementById('time').innerHTML=Date()" class="button">Click_me</button>
+		</h1>
+	<button onclick="getElementById('time').innerHTML=Date()" class="button">Click me</button>
 	<div class="Time-location" id="time"> </div>
+	</div>
+		<p style="color:white;">It seems every change is one change behind, or is it</p>
+		<img src="cute-kitty-animated-gif-35.gif" width="250" height="250">
+
+
+
+	<div class="container">
+
+	</div>
+
+	<div class="container">
+		<video width="1280" height="720" controls>
+			<source src="Equinox_Small.mp4" type="video/mp4">
+			Your Browser does not support this video type.
+		</video>
+	</div>
+
 </div>
-	<p style="color:white;">I'm hosted with GitHub Pages.</p>
-	<p style="color:white;">I am hoping html proves to be fun?</p>
-	<p style="color:white;">It seems every change is one change behind, or is it</p>
-	<img src="cute-kitty-animated-gif-35.gif" width="250" height="250">
 
+<!-- Scripts -->
 
-
-<div class="container">
-
-</div>
-
-<div class="container">
-	<video width="1280" height="720" controls>
-		<source src="Equinox_Small.mp4" type="video/mp4">
-		Your Browser does not support this video type.
-	</video>
-</div>
-
+<script>
+function openTab(evt, tabName) {
+	var i, tabcontent, tablinks;
+    tabcontent = document.getElementsByClassName("tabcontent");
+    for (i = 0; i < tabcontent.length; i++) {
+    	tabcontent[i].style.display = "none";
+    }
+    tablinks = document.getElementsByClassName("tablinks");
+    for(i = 0; i < tablinks.length; i++) {
+    	tablinks[i].className = tablinks[i].className.replace(" active", "");
+    }
+    document.getElementById(tabName).style.display = "block";
+    evt.currentTarget.className += " active";
+}
+</script> 
 
 </body>
 </html>
