--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ button{
     outline: none;
     cursor: pointer;
     padding: 14px 16px;
-    trasnsition: 0.3s;
+    transition: 0.3s;
     font-size: 17px;
 }
     
